Enable container support by default in both Hotspot and OpenJ9. Also enable idle optimizations in OpenJ9.